--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 											
 										</ul>
 									</li>
-									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>Contact us</span></a></li>
+									<li><a class="icon fa-sitemap" href="#"><span>Contact us</span></a></li>
 								</ul>
 							</nav>
 
@@ -304,14 +304,5 @@
 				</section>
 
 		</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
