--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>Для вас старалась студентки группы №3043</li><li>Шевченко Дарьюшка</li>
+							<li>Для вас старалась студенткa группы №3043</li><li>Шевченко Дарьюшка</li>
 						</ul>
 					</div>
 				</section>
