--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 												</li>
 												</li>
 												<li class="icon fa-dribbble">
-													<a href="#">C идеями по оформлению помогала А.Вaйда</a>
+													<p><ins>C идеями по оформлению помогала А.Вaйда</ins></p>
 												</li>
 											</ul>
 										</div>
